Nastaveni Font Awesome

--- a/src-front/less/utils/vars/_main.less
+++ b/src-front/less/utils/vars/_main.less
@@ -1,13 +1,12 @@
 // START urls
 @images: "/img";
 @fonts: "/fonts";
+
+@fa-font-path: "@{fonts}/font-awesome";
 // END urls
 
 // START fonts
 @main-font: "", sans-serif; // TODO: Insert font name here
-@fa-regular: "Font Awesome 5 Regular";
-@fa-solid: "Font Awesome 5 Free";
-@fa-brands: "Font Awesome 5 Brands";
 // END fonts
 
 // START colors
