Priprava fontu a barev v LESS

--- a/src-front/less/base/_typography.less
+++ b/src-front/less/base/_typography.less
@@ -1,5 +1,17 @@
-// Výchozí font
+// Vychozi font
 @font-face {
-  font-family: Bree;
-  src: url("@{fonts}/BreeSerif-Regular.otf");
+  font-family: "Alegreya sans";
+  src: url("@{fonts}/alegreya-sans/AlegreyaSans-Regular.ttf");
+}
+
+// Font pro kapitalky
+@font-face {
+  font-family: "Alegreya sans SC";
+  src: url("@{fonts}/alegreya-sans-sc/AlegreyaSansSC-Regular.ttf");
+}
+
+// Font pro nazev webove aplikace
+@font-face {
+  font-family: Raleway;
+  src: url("@{fonts}/raleway/Raleway-Regular.ttf");
 }
