--- a/src-front/less/utils/vars/_main.less
+++ b/src-front/less/utils/vars/_main.less
@@ -6,14 +6,19 @@
 // END urls
 
 // START fonts
-@main-font: "", sans-serif; // TODO: Insert font name here
+@main-font: "Alegreya sans", sans-serif;
+@small-caps-font: "Alegreya sans SC", sans-serif;
+@web-name-font: Raleway, sans-serif;
 // END fonts
 
 // START colors
-@primary-color: #000000; // TODO: set primary color
-@secondary-color: #000000; // TODO: set secondary color
-@dark-color: #000000; // TODO: set dark color
-@light-color: #000000; // TODO: set light color
-@success-color: #000000; // TODO: set success color
-@error-color: #000000; // TODO: set error color
+@yellow-primary: #F3D452;
+@yellow-other: #FFE252;
+@green-dark: #84ADAA;
+@green-light: #D4DDDD;
+@red: #F08693;
+@gray-light: #EEE9E5;
+@gray-dark: #A7A5A6;
+@black: #5E5E5F;
+@white: white;
 // END colors
