Preklady komentaru v LESS (v pouzite sablone jsou anglicky)

--- a/src-front/less/base/_base.less
+++ b/src-front/less/base/_base.less
@@ -1,4 +1,4 @@
-// START tags
+// START obecne
 a {
   text-decoration: none;
 }
@@ -15,4 +15,4 @@ body {
   background: @page-bg;
   color: @text-c;
 }
-// END tags
+// END obecne
