--- a/src-front/less/utils/vars/_main.less
+++ b/src-front/less/utils/vars/_main.less
@@ -1,17 +1,17 @@
-// START urls
+// START url adresy
 @images: "/img";
 @fonts: "/fonts";
 
 @fa-font-path: "@{fonts}/font-awesome";
-// END urls
+// END url adresy
 
-// START fonts
+// START fonty
 @main-font: "Alegreya sans", sans-serif;
 @small-caps-font: "Alegreya sans SC", sans-serif;
 @web-name-font: Raleway, sans-serif;
-// END fonts
+// END fonty
 
-// START colors
+// START barvy
 @yellow-primary: #F3D452;
 @yellow-other: #FFE252;
 @green-dark: #84ADAA;
@@ -21,4 +21,4 @@
 @gray-dark: #A7A5A6;
 @black: #5E5E5F;
 @white: white;
-// END colors
+// END barvy
