Oprava nazvu promennych pro zlutou barvu v LESS

--- a/src-front/less/utils/vars/_main.less
+++ b/src-front/less/utils/vars/_main.less
@@ -12,8 +12,8 @@
 // END fonty
 
 // START barvy
-@yellow-primary: #F3D452;
-@yellow-other: #FFE252;
+@yellow-dark: #F3D452;
+@yellow-light: #FFE252;
 @green-dark: #84ADAA;
 @green-light: #D4DDDD;
 @red: #F08693;
