Sablona pro prehled

--- a/src-front/less/core.less
+++ b/src-front/less/core.less
@@ -15,6 +15,7 @@
 @import "utils/vars/_color";
 @import "utils/vars/_size";
 @import "utils/vars/_z-index";
+@import "utils/vars/_media";
 
 @import "utils/functions/_functions";
 
@@ -67,6 +68,8 @@
 @import "components/_headings";
 @import "components/_alerts";
 @import "components/_icons";
+@import "components/_links";
+@import "components/_school";
 
 
 /*
@@ -74,6 +77,7 @@
     * Speciální styly pro stránky
 */
 @import "pages/_error-pages";
+@import "pages/_summary";
 
 
 /*
