--- a/src-front/less/utils/vars/_color.less
+++ b/src-front/less/utils/vars/_color.less
@@ -1,4 +1,21 @@
 // START obecne
-@page-bg: @gray-dark;
-@text-c: @white;
+@page-bg: @white;
+@text-c: @dark-grey;
+@link-c: @dark-green;
 // END obecne
+
+
+// START nadpisy
+@main-heading-c: @dark-green;
+@box-heading-c: @dark-yellow;
+// END nadpisy
+
+
+// START hlavicka
+@header-bg: @light-grey;
+// END hlavicka
+
+
+// START paticka
+@footer-bg: @light-grey;
+// END paticka
