--- a/src-front/less/utils/vars/_size.less
+++ b/src-front/less/utils/vars/_size.less
@@ -1,4 +1,20 @@
+// START obecne
+@page-side-p: 5%;
+@page-top-bottom-p: 2em;
+// END
+
+// START rozlozeni
+@content-section-p: 1em;
+@box-p: .7em;
+@box-row-p: .3em;
+@box-row-bigger-p: .7em;
+@footer-p: @content-section-p;
+// END rozlozeni
+
+
 // START fonty
-@font-s: 1em;
-@fa-font-size-base: @font-s;
+@font-s: .75em;
+
+@main-heading-f-s: @font-s + .5em;
+@box-heading-f-s: @font-s + .5em;
 // END fonty
