--- a/src-front/less/utils/vars/_main.less
+++ b/src-front/less/utils/vars/_main.less
@@ -1,24 +1,24 @@
 // START url adresy
 @images: "/img";
 @fonts: "/fonts";
-
-@fa-font-path: "@{fonts}/font-awesome";
 // END url adresy
+
 
 // START fonty
 @main-font: "Alegreya sans", sans-serif;
-@small-caps-font: "Alegreya sans SC", sans-serif;
+@caps-font: "Alegreya sans SC", sans-serif;
 @web-name-font: Raleway, sans-serif;
 // END fonty
 
+
 // START barvy
-@yellow-dark: #F3D452;
-@yellow-light: #FFE252;
-@green-dark: #84ADAA;
-@green-light: #D4DDDD;
+@dark-yellow: #F3D452;
+@light-yellow: #FFE252;
+@dark-green: #84ADAA;
+@light-green: #D4DDDD;
 @red: #F08693;
-@gray-light: #EEE9E5;
-@gray-dark: #A7A5A6;
+@light-grey: #EEE9E5;
+@dark-grey: #A7A5A6;
 @black: #5E5E5F;
 @white: white;
 // END barvy
