Sablona pro registraci

--- a/src-front/less/components/_headings.less
+++ b/src-front/less/components/_headings.less
@@ -10,3 +10,8 @@
   text-transform: uppercase;
   font-size: @box-heading-f-s;
 }
+
+.content-heading {
+  &:extend(.box-heading);
+  text-align: center;
+}
