--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -52,11 +52,6 @@
 .take-up-i {
   .icon(@fa-var-hand-receiving, "s");
 }
-
-.done-i {
-  .icon(@fa-var-check, "s");
-  color: @dark-green;
-}
 // END prehled
 
 
@@ -73,3 +68,16 @@
   .icon(@fa-var-image, "d");
 }
 // END typy souboru a adresar
+
+
+// START formulare
+.done-i {
+  .icon(@fa-var-check, "s");
+  color: @dark-green;
+}
+
+.error-i {
+  .icon(@fa-var-exclamation, "s");
+  color: @red;
+}
+// END formulare
