--- a/src-front/less/layout/_content.less
+++ b/src-front/less/layout/_content.less
@@ -20,3 +20,29 @@
     }
   }
 }
+
+
+.page {
+  &.form-page {
+    width: 90%;
+    margin: 0 auto;
+    border: 2px solid @light-yellow;
+    padding: 1em;
+
+    @media screen and (min-width: @tablet) {
+      width: 70%;
+    }
+
+    @media screen and (min-width: @desktop) {
+      width: 60%;
+    }
+
+    @media screen and (min-width: @big-desktop) {
+      width: 50%;
+    }
+
+    .content-container {
+      margin-top: 2em;
+    }
+  }
+}
