--- a/src-front/less/layout/_header.less
+++ b/src-front/less/layout/_header.less
@@ -48,6 +48,17 @@
             margin-left: 1.4em;
           }
         }
+
+        @media screen and (min-width: @big-tablet) {
+          .open-close-button {
+            display: none;
+          }
+        }
+      }
+
+      .not-logged-user-actions {
+        display: flex;
+        justify-content: flex-end;
       }
     }
   }
