--- a/src-front/templates/aplikacni-vrstva/prehled.html
+++ b/src-front/templates/aplikacni-vrstva/prehled.html
@@ -27,7 +27,7 @@
 
             <div class="actions">
                 <i class="notifications-i notifications" id="_show-notifications-b"></i>
-                <i class="hamburger-menu-i" id=_menu-control-b"></i>
+                <i class="hamburger-menu-i open-close-button" id=_menu-control-b"></i>
                 <a class="action-link logout" href="#logout">Odhlásit se</a>
 
                 <div class="notifications-box">
@@ -50,7 +50,7 @@
 </header>
 
 
-<main class="page-content">
+<main class="page-content summary">
     <div class="left-content">
         <section class="calendar-section">
             <header class="week-switch">
