--- a/src-front/less/components/_headings.less
+++ b/src-front/less/components/_headings.less
@@ -15,3 +15,10 @@
   &:extend(.box-heading);
   text-align: center;
 }
+
+.introduction-heading {
+  color: @intro-heading-c;
+  font-size: @intro-heading-f-s;
+  text-align: center;
+  font-weight: bold;
+}
