--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -81,3 +81,29 @@
   color: @red;
 }
 // END formulare
+
+// START uvodni stranka
+.school-files-i {
+  .icon(@fa-var-folder-open, "s");
+}
+
+.timetable-i {
+  .icon(@fa-var-calendar-alt, "s");
+}
+
+.school-notes-i {
+  .icon(@fa-var-money-check-edit, "d");
+}
+
+.school-sharing-i {
+  .icon(@fa-var-users, "s");
+}
+
+.smile-i {
+  .icon(@fa-var-smile, "r");
+}
+
+.laugh-i {
+  .icon(@fa-var-laugh, "r");
+}
+// END uvodni stranka
