--- a/src-front/less/utils/vars/_color.less
+++ b/src-front/less/utils/vars/_color.less
@@ -1,3 +1,15 @@
+// START barvy
+@dark-yellow: #F3D452;
+@light-yellow: #FFE252;
+@dark-green: #84ADAA;
+@light-green: #D4DDDD;
+@red: #F08693;
+@light-grey: #EEE9E5;
+@dark-grey: #A7A5A6;
+@black: #5E5E5F;
+@white: white;
+// END barvy
+
 // START obecne
 @page-bg: @white;
 @text-c: @dark-grey;
@@ -8,6 +20,7 @@
 // START nadpisy
 @main-heading-c: @dark-green;
 @box-heading-c: @dark-yellow;
+@intro-heading-c: @dark-green;
 // END nadpisy
 
 
