Doplneni notifikaci do sablony prehledu

--- a/src-front/templates/aplikacni-vrstva/prehled.html
+++ b/src-front/templates/aplikacni-vrstva/prehled.html
@@ -26,14 +26,17 @@
             </div>
 
             <div class="actions">
-                <i class="notifications-i notifications" id="_show-notifications-b"></i>
+                <div class="notifications">
+                    <i class="notifications-i notification-icon active" id="_show-notifications-b"></i>
+
+                    <div class="notifications-box active">
+                        <div class="notification">Veronika Zemanová s vámi sdílela poznámku</div>
+                        <div class="notification">Veronika Zemanová s vámi sdílela upozornění</div>
+                        <!-- TODO: Dynamicky generované -->
+                    </div>
+                </div>
                 <i class="hamburger-menu-i open-close-button" id=_menu-control-b"></i>
                 <a class="action-link logout" href="#logout">Odhlásit se</a>
-
-                <div class="notifications-box">
-                    <!-- TODO: Doplnit strukturu -->
-                    <!-- TODO: Dynamicky generované --->
-                </div>
             </div>
         </div>
     </section>
