--- a/src-front/less/layout/_header.less
+++ b/src-front/less/layout/_header.less
@@ -38,6 +38,33 @@
 
         .notifications {
           margin-right: .7em;
+          display: inline-block;
+          position: relative;
+
+          .notification-icon.active {
+            color: @red;
+          }
+
+          .notifications-box {
+            display: none;
+
+            &.active {
+              display: block;
+              position: absolute;
+              right: 0;
+              border: 3px solid @dark-grey;
+              background: @light-grey;
+              padding: .6em;
+              margin-top: .4em;
+              width: 12em;
+            }
+
+            .notification:not(:first-of-type) {
+              border-top: 1px solid @dark-grey;
+              padding-top: .2em;
+              margin-top: .2em;
+            }
+          }
         }
 
         .logout {
