Pridani sablony pro pridani tridy

--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -84,6 +84,14 @@
   .icon(@fa-var-exclamation, "s");
   color: @red;
 }
+
+.select-button-down-i {
+  .icon(@fa-var-caret-left, "s");
+}
+
+.select-button-up-i {
+  .icon(@fa-var-caret-right, "s");
+}
 // END formulare
 
 // START uvodni stranka
