--- a/src-front/less/utils/vars/_size.less
+++ b/src-front/less/utils/vars/_size.less
@@ -19,3 +19,10 @@
 @box-heading-f-s: @font-s + .5em;
 @intro-heading-f-s: @font-s + .5em;
 // END fonty
+
+// START formulare
+@label-w: 10em;
+@input-p: .5em;
+@select-input-p: @input-p + 1em; // 1em - cca velikost tlacitka
+@max-select-input-content-w: 5em;
+// END formulare
