--- a/src-front/less/utils/vars/_size.less
+++ b/src-front/less/utils/vars/_size.less
@@ -21,8 +21,9 @@
 // END fonty
 
 // START formulare
-@label-w: 10em;
+@label-w: 8em;
 @input-p: .5em;
 @select-input-p: @input-p + 1em; // 1em - cca velikost tlacitka
+@min-select-input-content-w: 2em;
 @max-select-input-content-w: 5em;
 // END formulare
