Pridana sablona pro moje upozorneni a poznamky; Oprava uppercase a drobne zobecneni

--- a/src-front/less/components/_buttons.less
+++ b/src-front/less/components/_buttons.less
@@ -1,13 +1,12 @@
 .button {
   color: @dark-green;
-  text-transform: lowercase;
   font-weight: bold;
-  font-family: @caps-font;
   border: none;
   border-radius: 3px;
   padding: .7em .6em;
   display: block;
   white-space: nowrap;
+  .uppercase();
 
   &:hover {
     cursor: pointer;
