--- a/src-front/less/components/_links.less
+++ b/src-front/less/components/_links.less
@@ -12,8 +12,7 @@
 .action-link {
   &:extend(.basic-link);
 
-  text-transform: uppercase;
-  font-family: @caps-font;
+  .uppercase();
   font-weight: bold;
 }
 
