--- a/src-front/less/components/_school.less
+++ b/src-front/less/components/_school.less
@@ -1,12 +1,11 @@
 .school-date {
   font-weight: bold;
-  text-transform: uppercase;
-  font-family: @caps-font;
+  .uppercase();
 }
 
 .school-subject {
   color: @black;
   font-weight: bold;
   font-size: @font-s + .3em;
-  font-family: @caps-font;
+  .uppercase();
 }
