--- a/src-front/less/core.less
+++ b/src-front/less/core.less
@@ -70,6 +70,7 @@
 @import "components/_icons";
 @import "components/_links";
 @import "components/_school";
+@import "components/_control-bars";
 
 
 /*
@@ -79,6 +80,7 @@
 @import "pages/_error-pages";
 @import "pages/_summary";
 @import "pages/_introduction";
+@import "pages/_my-reminders-and-notes";
 
 
 /*
