--- a/src-front/less/layout/_tables.less
+++ b/src-front/less/layout/_tables.less
@@ -5,8 +5,7 @@
 
   th {
     font-weight: normal;
-    font-family: @caps-font;
-    text-transform: uppercase;
+    .uppercase();
 
     .day-of-week, .date, .lesson-time, .lesson-number {
       display: block;
