--- a/src-front/less/utils/vars/_size.less
+++ b/src-front/less/utils/vars/_size.less
@@ -9,6 +9,9 @@
 @box-row-p: .3em;
 @box-row-bigger-p: .7em;
 @footer-p: @content-section-p;
+@page-b-w: 2px;
+@private-content-page-b-w: @page-b-w * 3;
+@page-p: 1em;
 // END rozlozeni
 
 
