--- a/src-front/templates/aplikacni-vrstva/prehled.html
+++ b/src-front/templates/aplikacni-vrstva/prehled.html
@@ -53,7 +53,7 @@
 </header>
 
 
-<main class="page-content summary">
+<main class="page-content two-columns">
     <div class="left-content">
         <section class="calendar-section">
             <header class="week-switch">
