--- a/src-front/less/components/_headings.less
+++ b/src-front/less/components/_headings.less
@@ -7,8 +7,8 @@
 
 .box-heading {
   color: @box-heading-c;
-  text-transform: uppercase;
   font-size: @box-heading-f-s;
+  .uppercase();
 }
 
 .content-heading {
