--- a/src-front/less/layout/_menus.less
+++ b/src-front/less/layout/_menus.less
@@ -4,6 +4,7 @@
   border-bottom: 4px solid @header-bg;
   position: absolute;
   width: 100%;
+  z-index: @menu-zi;
 
   @media screen and (min-width: @big-tablet) {
     position: initial;
@@ -26,8 +27,7 @@
 
       .menu-link {
         color: inherit;
-        text-transform: uppercase;
-        font-family: @caps-font;
+        .uppercase();
         white-space: nowrap;
       }
 
