Oprava tridy <main> (reseni rozpadavani se u obrazovek 1440+)

--- a/src-front/templates/aplikacni-vrstva/prehled.html
+++ b/src-front/templates/aplikacni-vrstva/prehled.html
@@ -53,7 +53,7 @@
 </header>
 
 
-<main class="page-content two-columns">
+<main class="page-content summary">
     <div class="left-content">
         <section class="calendar-section">
             <header class="week-switch">
@@ -606,7 +606,7 @@
                 </header>
 
                 <section class="box-content">
-                    <table class="shared-content-table">
+                    <table class="shared-content-table files">
                         <tr class="content-row">
                             <td class="from">
                                 <div class="from-container">
@@ -736,7 +736,7 @@
                 </header>
 
                 <section class="box-content">
-                    <table class="shared-content-table">
+                    <table class="shared-content-table reminders">
                         <tr class="content-row">
                             <td class="from">
                                 <div class="from-container">
@@ -843,7 +843,7 @@
                 </header>
 
                 <section class="box-content">
-                    <table class="shared-content-table">
+                    <table class="shared-content-table notes">
                         <tr class="content-row">
                             <td class="from">
                                 <div class="from-container">
