Oprava titulků u šablon

--- a/src-front/templates/aplikacni-vrstva/moje-upozorneni-a-poznamky.html
+++ b/src-front/templates/aplikacni-vrstva/moje-upozorneni-a-poznamky.html
@@ -6,7 +6,7 @@
     <base href="/" />
     <meta charset="UTF-8" />
     <meta content="Michal ŠMAHEL (ceskyDJ)" name="author" />
-    <title>Aplikační vrstva - Přehled</title>
+    <title>Aplikační vrstva - Moje upozornění a poznámky</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <meta content="width=device-width,height=device-height" name="viewport" />
 </head>
