--- a/src-front/templates/aplikacni-vrstva/pridani-tridy.html
+++ b/src-front/templates/aplikacni-vrstva/pridani-tridy.html
@@ -6,7 +6,7 @@
     <base href="/" />
     <meta charset="UTF-8" />
     <meta content="Michal ŠMAHEL (ceskyDJ)" name="author" />
-    <title>Aplikační vrstva - Registrace</title>
+    <title>Aplikační vrstva - Přidání třídy</title>
     <link href="/css/styles.css" rel="stylesheet" type="text/css" />
     <meta content="width=device-width,height=device-height" name="viewport" />
 </head>
