Nastavení sticky footer (patička vždy u spodního okraje)

--- a/src-front/less/layout/_footer.less
+++ b/src-front/less/layout/_footer.less
@@ -3,6 +3,7 @@
   background: @footer-bg;
   display: flex;
   flex-direction: column-reverse;
+  margin-top: auto;
 
   .footer-info {
     margin-top: 0.7em;
