Pridana sablona pro moje soubory

--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -119,3 +119,30 @@
   .icon(@fa-var-laugh, "r");
 }
 // END uvodni stranka
+
+
+// START spravce souboru
+.upload-i {
+  .icon(@fa-var-arrow-to-top, "s");
+}
+
+.create-folder-i {
+  .icon(@fa-var-folder-plus, "r");
+}
+
+.share-i {
+  .icon(@fa-var-share-square, "s");
+}
+
+.move-i {
+  .icon(@fa-var-arrow-left, "r");
+}
+
+.rename-i {
+  .icon(@fa-var-pencil-alt, "s");
+}
+
+.delete-i {
+  .icon(@fa-var-trash, "r");
+}
+// END spravce souboru
