--- a/src-front/less/pages/_my-reminders-and-notes.less
+++ b/src-front/less/pages/_my-reminders-and-notes.less
@@ -7,6 +7,10 @@
   .toolbar-page-content {
     padding: @page-p 0;
 
+    .content-header {
+      margin-left: @page-p;
+    }
+
     .content-container {
       margin-top: 1em;
 
