--- a/src-front/templates/aplikacni-vrstva/moje-upozorneni-a-poznamky.html
+++ b/src-front/templates/aplikacni-vrstva/moje-upozorneni-a-poznamky.html
@@ -63,7 +63,9 @@
 
         <div class="toolbar-page-content my-content left-content">
             <header class="content-header">
-                <i class="add-i adding-tool"></i>
+                <div class="tools">
+                    <i class="add-i"></i>
+                </div>
                 <h2 class="content-heading">Moje upozornění</h2>
             </header>
 
@@ -134,7 +136,9 @@
 
     <div class="page my-content right-content">
         <header class="content-header">
-            <i class="add-i adding-tool"></i>
+            <div class="tools">
+                <i class="add-i"></i>
+            </div>
             <h2 class="content-heading">Moje poznámky</h2>
         </header>
 
