--- a/src-front/less/layout/_content.less
+++ b/src-front/less/layout/_content.less
@@ -115,11 +115,19 @@
     justify-content: center;
     position: relative;
 
-    .adding-tool {
+    .tools {
       color: @dark-green;
       position: absolute;
-      left: @page-p;
+      left: 0;
       align-self: center;
+
+      i {
+        cursor: pointer;
+
+        &:not(:first-of-type) {
+          margin-left: .5em;
+        }
+      }
     }
   }
 
